--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,10 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/similarweb/jobs/1939308'>Job Application for Data Scientist at SimilarWeb</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/dathena/aebcbfa7-e591-470a-9440-d7f8561e0325'>Dathena - Data Scientist (Bangkok)</a></h5> 
 <p><span class="badge badge-light">Bangkok Bangkok Bangkok</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -137,7 +141,7 @@
 <p><span class="badge badge-light">Chicago Chicago  Chicago</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oWbmafwn&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngbboMwh&jvi=oWbmafwn,Job&jvk=Job'>Medidata Solutions Careers - Senior Product Manager, Data Science</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oWbmafwn&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngbboMwh&jvi=oWbmafwn,Job&jvk=Job'>Medidata Solutions Careers - Senior Product Manager, Data Science</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -173,11 +177,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/civisanalytics/jobs/1937557'>Job Application for Applied Data Scientist, Nonprofit at Civis Analytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/civisanalytics/jobs/1937557'>Job Application for Applied Data Scientist, Nonprofit at Civis Analytics</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://thinkingmachin.es/careers/web-engineer/'>Web Engineer - Thinking Machines Data Science</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thinkingmachin.es/careers/web-engineer/'>Web Engineer - Thinking Machines Data Science</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -241,7 +245,7 @@
 <p><span class="badge badge-light">Beijing</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retinaai/jobs/4251997002?gh_src=eaf261482'>Job Application for Data Scientist at Retina AI</a></h5> 
+<h5><a href='https://boards.greenhouse.io/retinaai/jobs/4251997002?gh_src=eaf261482'>Job Application for Data Scientist at Retina AI</a></h5> 
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -293,17 +297,17 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://worknola.com/job/324370/associate-data-scientist'>Associate Data Scientist | WorkNOLA</a></h5> 
+<h5><a href='https://worknola.com/job/324370/associate-data-scientist'>Associate Data Scientist | WorkNOLA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gatesfoundation.wd1.myworkdayjobs.com/en-US/Gates/job/Seattle-WA/Data-Scientist--People-Analytics_B013988'>Data Scientist, People Analytics</a></h5> 
+<h5><a href='https://gatesfoundation.wd1.myworkdayjobs.com/en-US/Gates/job/Seattle-WA/Data-Scientist--People-Analytics_B013988'>Data Scientist, People Analytics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Design and implement data science research projects that utilize advanced 
 statistical methods, such as regression analysis and machine learning, to 
 address?...</p>
 <hr/>
-<h5><a href='https://sailpoint.wd1.myworkdayjobs.com/en-US/SailPoint/job/Headquarters-Austin-Texas-USA/Data-Science-Interns_R001995'>Data Science Interns</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sailpoint.wd1.myworkdayjobs.com/en-US/SailPoint/job/Headquarters-Austin-Texas-USA/Data-Science-Interns_R001995'>Data Science Interns</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... At SailPoint, you will work on the latest tools in Machine Learning, Big Data, 
 Cloud Computing, Graph Databases to solve challenging problems. This is a 
@@ -372,7 +376,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">San Francisco  San Francisco  San Francisco</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1933895'>Job Application for Associate Data Scientist at Cardlytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cardlytics/jobs/1933895'>Job Application for Associate Data Scientist at Cardlytics</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -411,7 +415,7 @@ data?...</p>
 <p>Oct 16, 2019 ... Our data science interns are considered full time employees by their peers--in 
 fact, you will be expected to contribute right away as a member of our Scrum?...</p>
 <hr/>
-<h5><a href='https://broadinstitute.wd1.myworkdayjobs.com/en-US/broad_institute/job/Cambridge-MA/Associate-Computational-Biologist--Data-Sciences-Platform_0215'>Associate Computational Biologist, Data Sciences Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://broadinstitute.wd1.myworkdayjobs.com/en-US/broad_institute/job/Cambridge-MA/Associate-Computational-Biologist--Data-Sciences-Platform_0215'>Associate Computational Biologist, Data Sciences Platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 20, 2019 ... The life sciences are in the midst of a data revolution. Cheap and accurate 
 genome sequencing is a reality, high-resolution imaging is becoming routine, 
@@ -485,11 +489,6 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... Data Scientist. Los Angeles, CA; Full Time; Mid Level. Enter your name and email 
 to generate a unique referral link and receive credit for anyone who applies?...</p>
-<hr/>
-<h5><a href='https://fractalanalytics.applytojob.com/apply/qEcm37wBnQ/Data-Scientist-Financial-Services'>Data Scientist (Financial Services) - Fractal Analytics - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Oct 13, 2019 ... Apply to Data Scientist (Financial Services) at Fractal Analytics in San Francisco, 
-CA.</p>
 <hr/>
 
 
